--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <title>Demo Portal</title>
+  <title>PIWEBAPI</title>
   <!--favicon-->
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/plugins/notifications/css/lobibox.min.css"/>
@@ -31,7 +31,7 @@
         <div class="brand-logo">
             <a href="#!Home">
              <!--<img src="assets/images/logo-icon.png" class="logo-icon" alt="logo icon">-->
-             <h5 class="logo-icon logo-text">Demo Portal  </h5>
+             <h5 class="logo-icon logo-text">PIWEBAPI  </h5>
            </a>
 	</div>
     <ul class="sidebar-menu do-nicescrol">
@@ -54,6 +54,11 @@
           <li>
               <a href="#!Allocation" class="waves-effect">
                   <i class="ti-layout-slider"></i> Allocation
+              </a>
+          </li> 
+           <li>
+              <a href="#!ElementData" class="waves-effect">
+                  <i class="ti-agenda"></i> Elements
               </a>
           </li> 
     </ul>	 
@@ -98,5 +103,17 @@
   <script src="Views/Angular/masterController.js" type="text/javascript"></script>
   <script src="Views/Angular/allocationController.js" type="text/javascript"></script>
   <script src="Views/Angular/assetdesignController.js" type="text/javascript"></script>
+  <script src="Views/Angular/elementDataController.js" type="text/javascript"></script>
+  
+  <script src="assets/plugins/bootstrap-datatable/js/jquery.dataTables.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/dataTables.bootstrap4.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/dataTables.buttons.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/buttons.bootstrap4.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/jszip.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/pdfmake.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/vfs_fonts.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/buttons.html5.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/buttons.print.min.js"></script>
+  <script src="assets/plugins/bootstrap-datatable/js/buttons.colVis.min.js"></script>
 </body>
 </html>
