--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </li> 
            <li>
               <a href="#!ElementData" class="waves-effect">
-                  <i class="ti-agenda"></i> Elements
+                  <i class="ti-agenda"></i> PI Tags
               </a>
           </li> 
     </ul>	 
